[tool.poetry]
name = "ocrhelper"
version = "0.2.0"
description = "Tool for translating text from the screen and some more"
authors = ["Sergei <reyangood@gmail.com>"]
readme = "README.md"
packages = [{include = "ocrhelper"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cu118", source = "pytorch"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch"}
easyocr = "^1.7.0"
pyautogui = "^0.9.54"
pillow = "9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
