[tool.poetry]
name = "ocrhelper"
version = "1.3.0"
description = "Tool for translating text from the screen and some more"
authors = ["Sergei <reyangood@gmail.com>"]
readme = "README.md"
packages = [{include = "ocrhelper"}]

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.1"
deep-translator = {extras = ["ai"], version = "^1.11.4"}
pystray = "^0.19.4"
keyboard = "^0.13.5"
pillow = "9.5.0"
numpy = "^1.25.1"
tkextrafont = "^0.6.3"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
loguru = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
